fix overflow and wrapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,13 @@
 @theme {
   --font-mono: "Space Mono", monospace;
 }
+
+.prose {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
+
+.prose pre {
+  overflow-x: auto;
+  word-break: normal;
+}
